--- a/index.html
+++ b/index.html
@@ -9,15 +9,26 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <title>Frontend Mentor | QR code component</title>
+  <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
 
-  Improve your front-end skills by building projects
-
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-
-
+  <div class="wrapper">
+    <section class="card">
+      <div class="photo">
+        <img src="images/image-qr-code.png" alt="">
+      </div>
+      <div class="information">
+        <div class="information-title">
+          <h2>Improve your front-end skills by building projects</h2>
+        </div>
+        <div class="information-description">
+          <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+        </div>
+      </div>
+    </section>
+  </div>
 </body>
 
 </html>
