--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 </head>
 
 <body>
-
   <div class="wrapper">
     <section class="card">
       <div class="photo">
-        <img src="images/image-qr-code.png" alt="">
+        <div class="photo-image">
+          <img src="images/image-qr-code.png" alt="">
+        </div>
       </div>
       <div class="information">
         <div class="information-title">
